Fix a little bit weird thing in announce.md

--- a/source/_posts/2018-07-08-announce.md
+++ b/source/_posts/2018-07-08-announce.md
@@ -4,7 +4,7 @@ title: 資工系計中公告
 + 2018-04-11 alan: Home NFS將於今晚9點暫時進行維修，可能影響服務：所有工作站及 www.cs, 不會影響系上信箱收發信件
 + 2017-12-11 setsal: mail.cs 開始 rainloop webmail 服務, 並支援手機板操作
 + 2017-04-23 setsal: Mail 維修更新完畢，若有問題還請 mail 詢問
-+ 2017-02-20 mickey: quota 設定由於近日 Home NFS 異常，延至 + 2017-03-05 實施
++ 2017-02-20 mickey: quota 設定由於近日 Home NFS 異常，延至 2017-03-05 實施
 + 2017-02-18 mickey: Home NFS 已恢復運作，因為多顆硬碟損毀無法回復，目前使用先前備份檔案，造成部分檔案流失，敬請見諒。
 + 2016-10-23 setsal: vpn.cs 已恢復連線。
 + 2016-10-21 setsal: vpn.cs 目前由於使用者使用不當產生資安疑慮，遭計中中毒斷線，在查明原因前，暫時無法進行復線動作。若急須跳轉使用校內相關服務，還請透過 CCU VPN。
