update some info

--- a/source/_posts/2018-07-08-announce.md
+++ b/source/_posts/2018-07-08-announce.md
@@ -1,5 +1,8 @@
 title: 資工系計中公告
 ---
++ 2020-06-03 alan: 工作站 csie0,csie2,mcore8 預計於 2020/06/06 9~15 時進行系統更新，請避免於更新時段使用此三台工作站
++ 2020-02-25 kia: vpn.cs 目前上游網路連線異常，目前正在和相關單位確認當中，若急需跳轉使用校內相關服務，還請透過 CCU VPN
++ 2019-10-26 alan: NIS、workstation、mail、VPN 進行維護，會影響服務所有工作站，MAIL，VPN 
 + 2018-05-07 alan: Home NFS將於今晚9點進行維護，可能影響服務為所有工作站及 www.cs, 請儘量避免使用，以免資料丟失。不會影響系上信箱收發信件。
 + 2018-04-11 alan: Home NFS將於今晚9點暫時進行維修，可能影響服務：所有工作站及 www.cs, 不會影響系上信箱收發信件
 + 2017-12-11 setsal: mail.cs 開始 rainloop webmail 服務, 並支援手機板操作
